[Root] add readme